--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
+    "tsparticles": "^1.30.1",
+    "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
