--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
+    "emailjs-com": "^3.2.0",
     "react": "^16.14.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.14.0",
     "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
