--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-project-react",
+  "homepage": "http://mansursaleem.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,9 +19,9 @@
     "react-hook-form": "^7.14.0",
     "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.6.1",
     "react-typed": "^1.2.0",
     "tsparticles": "^1.30.1",
-    "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.4.2"
   }
 }
