--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.14.0",
     "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-social-icons": "^5.6.1",
     "react-typed": "^1.2.0",
     "tsparticles": "^1.30.1",
