--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-project-react",
-  "homepage": "http://mansursaleem.com",
-  "version": "0.1.0",
+  "homepage": "mansursaleem.com",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
