Updated About Me

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-project-react",
-  "homepage": "mansursaleem.com",
+  "homepage": "/",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
